<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="add"
            android:text="@string/str_add_button" />

        <Button
            android:id="@+id/retrieve_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="retrieve"
            android:text="@string/str_retrieve_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/sync_from_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="syncFrom"
            android:text="@string/sync_from_button" />

        <Button
            android:id="@+id/sync_to_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="syncTo"
            android:text="@string/sync_to_button" />

    </LinearLayout>

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </ListView>

</LinearLayout>